--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,51 @@
 plugins {
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'java'
 }
 
-group 'org.example'
+group 'me.joan'
 version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven {
+        name 'm2-dv8tion'
+        url 'https://m2.dv8tion.net/releases'
+    }
 }
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+
+    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
+
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
+    // https://github.com/DV8FromTheWorld/JDA
+    implementation group: 'net.dv8tion', name:'JDA', version:'4.3.0_277'
+
 }
 
 test {
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class':'me.joan.Main'
+    }
+}
+
+shadowJar {
+    manifest {
+        inheritFrom project.tasks.jar.manifest
+    }
+
+    relocate 'org.apache.commons', 'me.joan.org.apache.commons'
+    relocate 'net.dv8tion', 'me.joan.net.dv8tion'
 }
